--- a/angular-web/src/app/home-builder/components/side-nav/side-nav.component.html
+++ b/angular-web/src/app/home-builder/components/side-nav/side-nav.component.html
@@ -19,5 +19,6 @@
     <div class="wrapper">
       <router-outlet></router-outlet>
     </div>
+    <app-layout-footer></app-layout-footer>
   </mat-sidenav-content>
 </mat-sidenav-container>
