--- a/angular-web/src/app/home-builder/components/side-nav/side-nav.component.css
+++ b/angular-web/src/app/home-builder/components/side-nav/side-nav.component.css
@@ -18,3 +18,16 @@
 .wrapper {
   margin: 50px;
 }
+
+footer {
+  background: #f3f3f3;
+  margin-top: 3rem;
+  padding: 1rem 0;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+footer .a {
+  background: #3f51b5;
+  text-decoration: none;
+}
