--- a/angular-web/src/app/home-builder/components/side-nav/side-nav.component.html
+++ b/angular-web/src/app/home-builder/components/side-nav/side-nav.component.html
@@ -1,15 +1,16 @@
 <mat-sidenav-container class="app-sidenav-container">
   <mat-sidenav
+    #sidenav
     class="app-sidenav mat-elevation-z10"
     [opened]="!isScreenSmall()"
     [mode]="isScreenSmall() ? 'over' : 'side'"
-    #sidenav
+    *appShowAuthed="true"
   >
-    <mat-toolbar color="primary">
+    <mat-toolbar color="primary" class="mat-elevation-z6 toolbar-menu">
       Menu
     </mat-toolbar>
     <mat-nav-list>
-      <a mat-list-item [routerLink]="[link.url]" *ngFor="let link of links">
+      <a mat-list-item routerLink="/{{ link.url }}" *ngFor="let link of links">
         {{ link.name }}
       </a>
     </mat-nav-list>
