--- a/angular-web/src/app/auth/auth.component.html
+++ b/angular-web/src/app/auth/auth.component.html
@@ -1,45 +1,94 @@
-<div class="auth-page">
-  <div class="container page">
-    <div class="row">
-
-      <div class="col-md-6 offset-md-3 col-xs-12">
-        <h1 class="text-xs-center">{{ title }}</h1>
-        <p class="text-xs-center">
-          <a [routerLink]="['/login']" *ngIf="authType == 'register'">Have an account?</a>
-          <a [routerLink]="['/register']" *ngIf="authType == 'login'">Need an account?</a>
-        </p>
-        <app-list-errors [errors]="errors"></app-list-errors>
-        <form [formGroup]="authForm" (ngSubmit)="submitForm()">
-          <fieldset [disabled]="isSubmitting">
-            <fieldset class="form-group">
-              <input
-                formControlName="username"
-                placeholder="Username"
-                class="form-control form-control-lg"
-                type="text"
-                *ngIf="authType == 'register'" />
-            </fieldset>
-            <fieldset class="form-group">
-              <input
-                formControlName="email"
-                placeholder="Email"
-                class="form-control form-control-lg"
-                type="text" />
-            </fieldset>
-            <fieldset class="form-group">
-              <input
-                formControlName="password"
-                placeholder="Password"
-                class="form-control form-control-lg"
-                type="password" />
-            </fieldset>
-            <button class="btn btn-lg btn-primary pull-xs-right" [disabled]="!authForm.valid" type="submit">
-              {{ title }}
+<mat-card>
+    <h1 class="text-xs-center title-size">{{ title }}</h1>
+    <p class="text-xs-center">
+        <a [routerLink]="['/login']" *ngIf="authType == 'register'">Have an account?</a>
+        <a [routerLink]="['/register']" *ngIf="authType == 'login'">Need an account?</a>
+    </p>
+    <app-list-errors [errors]="errors"></app-list-errors>
+    <!-- {{ this.authForm.value | json }} -->
+    <form [formGroup]="authForm" (ngSubmit)="submitForm()" class="form-container">
+        <fieldset [disabled]="isSubmitting" class="fieldset-style">
+            <mat-form-field *ngIf="authType == 'register'">
+                <mat-label>Username</mat-label>
+                <input
+                    matInput
+                    formControlName="username"
+                    placeholder="Ex. carl.xiao"
+                    type="text"
+                />
+                <mat-hint>Please enter valid username, total length at least 5!</mat-hint>
+                <mat-error
+                    *ngIf="
+                        usernameFormControl.hasError('minlength') &&
+                        !usernameFormControl.hasError('required')
+                    "
+                >
+                    Please enter a valid username!
+                </mat-error>
+                <mat-error *ngIf="usernameFormControl.hasError('required')">
+                    Username is <strong>required</strong>
+                </mat-error>
+            </mat-form-field>
+            <mat-form-field>
+                <mat-label>Email</mat-label>
+                <input
+                    matInput
+                    formControlName="email"
+                    type="text"
+                    placeholder="Ex. pat@example.com"
+                />
+                <mat-hint>Please enter valid email address!</mat-hint>
+                <mat-error
+                    *ngIf="
+                        emailFormControl.hasError('email') && !emailFormControl.hasError('required')
+                    "
+                >
+                    Please enter a valid email address
+                </mat-error>
+                <mat-error *ngIf="emailFormControl.hasError('required')">
+                    Email is <strong>required</strong>
+                </mat-error>
+            </mat-form-field>
+            <mat-form-field>
+                <mat-label>Password</mat-label>
+                <input
+                    matInput
+                    formControlName="password"
+                    type="password"
+                    placeholder="Ex. carl123"
+                />
+                <mat-hint>Please enter numbers plus characters, total length at least 5!</mat-hint>
+                <mat-error
+                    *ngIf="
+                        passwordFormControl.hasError('minlength') &&
+                        !passwordFormControl.hasError('required')
+                    "
+                >
+                    Please enter a valid password!
+                </mat-error>
+                <mat-error *ngIf="passwordFormControl.hasError('required')">
+                    Password is <strong>required</strong>
+                </mat-error>
+            </mat-form-field>
+            <mat-form-field *ngIf="authType == 'register'">
+                <mat-label>Select an Role</mat-label>
+                <mat-select formControlName="role">
+                    <mat-option value="buyer">Buyer</mat-option>
+                    <mat-option value="seller">Seller</mat-option>
+                </mat-select>
+                <mat-error *ngIf="roleFormControl.hasError('required')">
+                    Role is <strong>required</strong>
+                </mat-error>
+            </mat-form-field>
+            <button
+                mat-raised-button
+                color="primary"
+                class="sign-button"
+                [disabled]="!authForm.valid"
+                type="submit"
+            >
+                {{ title }}
             </button>
-          </fieldset>
-        </form>
-      </div>
-
-    </div>
-  </div>
-</div>
+        </fieldset>
+    </form>
+</mat-card>
