--- a/angular-web/src/app/home-builder/components/side-nav/side-nav.component.html
+++ b/angular-web/src/app/home-builder/components/side-nav/side-nav.component.html
@@ -7,6 +7,9 @@
     *appShowAuthed="true"
   >
     <mat-toolbar color="primary" class="mat-elevation-z6 toolbar-menu">
+      <button mat-button>
+        <mat-icon>account_balance</mat-icon>
+      </button>
       Menu
     </mat-toolbar>
     <mat-nav-list>
