--- a/angular-web/src/styles.css
+++ b/angular-web/src/styles.css
@@ -2,9 +2,28 @@
 
 html,
 body {
-  height: 100%;
+    height: 100%;
 }
 body {
-  margin: 0;
-  font-family: Roboto, "Helvetica Neue", sans-serif;
+    margin: 0;
+    font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+.md-18 {
+    font-size: 18px;
+}
+.md-24 {
+    font-size: 24px;
+}
+.md-36 {
+    font-size: 36px;
+}
+.md-48 {
+    font-size: 48px;
+}
+.error-messages {
+    color: #b85c5c !important;
+    font-weight: 700;
+    text-align: center;
+    list-style-type: none;
 }
