--- a/angular-web/src/app/home-builder/components/tool-bar/tool-bar.component.css
+++ b/angular-web/src/app/home-builder/components/tool-bar/tool-bar.component.css
@@ -1,11 +1,15 @@
 a {
-  color: white;
-  text-decoration: none;
-  font-family: source sans pro, sans-serif;
-  font-size: 1rem;
-  line-height: 1.5;
+    color: white;
+    text-decoration: none;
+    font-family: source sans pro, sans-serif;
+    font-size: 0.8rem;
+    line-height: 1.5;
 }
 
 .fill-remaining-space {
-  flex: 1 1 auto;
+    flex: 1 1 auto;
+}
+
+.button-span {
+    margin-left: 5px;
 }
