--- a/angular-web/src/app/material/layout/footer.component.html
+++ b/angular-web/src/app/material/layout/footer.component.html
@@ -1,10 +1,10 @@
 <footer class="mat-elevation-z6">
-  <div class="container">
-    <a class="logo-font" routerLink="/">XDD Market</a>
-    <span class="attribution">
-      &copy;
-      {{ today | date: "yyyy" }}. An interactive learning online Market Angular
-      project @Author Darphe & Longxiang
-    </span>
-  </div>
+    <div class="container">
+        <a class="logo-font" routerLink="/">XDD Market</a>
+        <span class="attribution">
+            &copy;
+            {{ today | date: "yyyy" }} | An interactive learning online Market Angular project |
+            @Author Darphe & Longxiang
+        </span>
+    </div>
 </footer>
