--- a/angular-web/src/app/home-builder/components/side-nav/side-nav.component.css
+++ b/angular-web/src/app/home-builder/components/side-nav/side-nav.component.css
@@ -1,38 +1,42 @@
 .app-sidenav-container {
-  flex: 1;
-  position: fixed;
-  width: 100%;
-  min-width: 100%;
-  height: 100%;
-  min-height: 100%;
+    flex: 1;
+    position: fixed;
+    width: 100%;
+    min-width: 100%;
+    height: 100%;
+    min-height: 100%;
 }
 .app-sidenav-content {
-  display: flex;
-  flex-direction: column;
-  height: 100%;
+    display: flex;
+    flex-direction: column;
+    height: 100%;
 }
 .app-sidenav {
-  width: 240px;
+    width: 240px;
 }
 .toolbar-menu {
-  font-family: source sans pro, sans-serif;
-  font-size: 1rem;
-  line-height: 1.5;
+    font-family: source sans pro, sans-serif;
+    font-size: 1rem;
+    line-height: 1.5;
 }
 
 .wrapper {
-  margin: 50px;
+    margin: 50px;
 }
 
 footer {
-  background: #f3f3f3;
-  margin-top: 3rem;
-  padding: 1rem 0;
-  position: absolute;
-  bottom: 0;
-  width: 100%;
+    background: #f3f3f3;
+    margin-top: 3rem;
+    padding: 1rem 0;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
 }
 footer .a {
-  background: #3f51b5;
-  text-decoration: none;
+    background: #3f51b5;
+    text-decoration: none;
+}
+.nav-item-cen {
+    text-align: center;
+    font-size: 15px;
 }
