--- a/angular-web/src/app/home-builder/components/side-nav/side-nav.component.html
+++ b/angular-web/src/app/home-builder/components/side-nav/side-nav.component.html
@@ -1,28 +1,35 @@
 <mat-sidenav-container class="app-sidenav-container">
-  <mat-sidenav
-    #sidenav
-    class="app-sidenav mat-elevation-z10"
-    [opened]="!isScreenSmall()"
-    [mode]="isScreenSmall() ? 'over' : 'side'"
-    *appShowAuthed="true"
-  >
-    <mat-toolbar color="primary" class="mat-elevation-z6 toolbar-menu">
-      <button mat-button>
-        <mat-icon>account_balance</mat-icon>
-      </button>
-      Menu
-    </mat-toolbar>
-    <mat-nav-list>
-      <a mat-list-item routerLink="/{{ link.url }}" *ngFor="let link of links">
-        {{ link.name }}
-      </a>
-    </mat-nav-list>
-  </mat-sidenav>
-  <mat-sidenav-content class="app-sidenav-content">
-    <app-tool-bar (toggleSidenav)="sidenav.toggle()"></app-tool-bar>
-    <div class="wrapper">
-      <router-outlet></router-outlet>
-    </div>
-    <app-layout-footer></app-layout-footer>
-  </mat-sidenav-content>
+    <mat-sidenav
+        #sidenav
+        class="app-sidenav mat-elevation-z10"
+        [opened]="!isScreenSmall()"
+        [mode]="isScreenSmall() ? 'over' : 'side'"
+        *appShowAuthed="true"
+    >
+        <mat-toolbar color="primary" class="mat-elevation-z6 toolbar-menu">
+            <button mat-button matTooltip="{{ currentUser.role }}'s Menu">
+                <mat-icon>{{
+                    currentUser.role == "BUYER"
+                        ? "shop"
+                        : currentUser.role == "SELLER"
+                        ? "store"
+                        : "admin_panel_settings"
+                }}</mat-icon>
+            </button>
+            {{ currentUser.role }}'s Menu
+        </mat-toolbar>
+        <mat-nav-list>
+            <a mat-list-item routerLink="/{{ link.url }}" *ngFor="let link of links">
+                {{ link.name }}
+                <mat-divider></mat-divider>
+            </a>
+        </mat-nav-list>
+    </mat-sidenav>
+    <mat-sidenav-content class="app-sidenav-content">
+        <app-tool-bar (toggleSidenav)="sidenav.toggle()"></app-tool-bar>
+        <div class="wrapper">
+            <router-outlet></router-outlet>
+        </div>
+        <app-layout-footer></app-layout-footer>
+    </mat-sidenav-content>
 </mat-sidenav-container>
