--- a/angular-web/src/app/material/layout/footer.component.css
+++ b/angular-web/src/app/material/layout/footer.component.css
@@ -1,23 +1,24 @@
 footer {
-  background: #3f51b5;
-  margin-top: 3rem;
-  padding: 1rem 0;
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  color: #f3f3f3;
+    background: #3f51b5;
+    margin-top: 3rem;
+    padding: 1rem 0;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    color: #f3f3f3;
+    font-size: 0.7rem;
 }
 footer .container {
-  margin: auto;
-  text-align: center;
+    margin: auto;
+    text-align: center;
 }
 
 footer a {
-  color: #f3f3f3;
-  text-decoration: none;
+    color: #f3f3f3;
+    text-decoration: none;
 }
 
 .logo-font {
-  font-family: titillium web, sans-serif;
-  vertical-align: middle;
+    font-family: titillium web, sans-serif;
+    vertical-align: middle;
 }
