--- a/angular-web/src/app/home-builder/components/cart/cart.component.css
+++ b/angular-web/src/app/home-builder/components/cart/cart.component.css
@@ -11,3 +11,7 @@
     background-image: url("https://material.angular.io/assets/img/examples/shiba1.jpg");
     background-size: cover;
 }
+
+.title-card {
+    text-align: center;
+}
