--- a/angular-web/src/app/home-builder/components/cart/cart.component.html
+++ b/angular-web/src/app/home-builder/components/cart/cart.component.html
@@ -1,28 +1,42 @@
 <mat-card>
+    <mat-card class="title-card">
+        <mat-card-actions>
+            <input type="hidden" value="" #prodId />
+            <button mat-raised-button color="primary" (click)="removeAll()">
+                Remove All Products
+            </button>
+            <button mat-raised-button color="primary">
+                Place All Products
+            </button>
+        </mat-card-actions>
+    </mat-card>
     <mat-grid-list cols="5" rowHeight="1:2">
         <div [hidden]="!loading">
-            Loading products...
+            Loading cart...
         </div>
 
         <div [hidden]="loading || results.length">
             No products are here... yet.
         </div>
-        <mat-grid-tile class="grid-tile" *ngFor="let product of results">
+        <mat-grid-tile class="grid-tile" *ngFor="let cart of results">
             <mat-card class="grid-card">
                 <mat-card-header>
                     <div mat-card-avatar class="grid-header-image"></div>
-                    <mat-card-title>{{ product.name }}</mat-card-title>
+                    <mat-card-title>{{ cart.name }}</mat-card-title>
                 </mat-card-header>
-                <img mat-card-image src="{{ product.imageUrl }}" alt="" />
+                <img mat-card-image src="{{ cart.imageUrl }}" alt="" />
                 <mat-card-content>
-                    <p>{{ product.description }}</p>
+                    <p>Quantity: {{ cart.quantity }}</p>
+                    <p>Price/per:{{ cart.price }}</p>
                 </mat-card-content>
                 <mat-card-actions>
-                    <input type="hidden" value="{{ product._id }}" #prodId />
+                    <input type="hidden" value="{{ cart.productId }}" #prodId />
                     <button mat-raised-button color="primary" (click)="addToCart(prodId.value)">
-                        Cart
+                        Place Order
                     </button>
-                    <button mat-raised-button color="primary" (click)="buy()">Buy</button>
+                    <button mat-raised-button color="primary" (click)="remove(prodId.value)">
+                        remove
+                    </button>
                 </mat-card-actions>
             </mat-card>
         </mat-grid-tile>
