--- a/angular-web/src/app/home-builder/components/main-content/main-content.component.html
+++ b/angular-web/src/app/home-builder/components/main-content/main-content.component.html
@@ -19,10 +19,22 @@
                 </mat-card-content>
                 <mat-card-actions>
                     <input type="hidden" value="{{ product._id }}" #prodId />
-                    <button mat-raised-button color="primary" (click)="addToCart(prodId.value)">
+                    <button
+                        mat-raised-button
+                        color="primary"
+                        matTooltip="Add to Shopping Cart"
+                        (click)="addToCart(prodId.value)"
+                    >
                         Cart
                     </button>
-                    <button mat-raised-button color="primary" (click)="buy()">Buy</button>
+                    <button
+                        mat-raised-button
+                        color="primary"
+                        matTooltip="Place an Order"
+                        (click)="buy()"
+                    >
+                        Buy
+                    </button>
                 </mat-card-actions>
             </mat-card>
         </mat-grid-tile>
