--- a/angular-web/src/app/seller-builder/components/products/products.component.html
+++ b/angular-web/src/app/seller-builder/components/products/products.component.html
@@ -1,1 +1,41 @@
-<p>products works!</p>
+<mat-card>
+    <mat-card class="title-card">
+        <mat-card-actions>
+            <input type="hidden" value="" #prodId />
+            <a mat-raised-button color="primary" [routerLink]="['/addProduct']">
+                Add Product
+            </a>
+        </mat-card-actions>
+    </mat-card>
+    <mat-grid-list cols="5" rowHeight="1:2">
+        <div [hidden]="!loading">
+            Loading products...
+        </div>
+
+        <div [hidden]="loading || results.length">
+            No products are here... yet.
+        </div>
+        <mat-grid-tile class="grid-tile" *ngFor="let cart of results">
+            <mat-card class="grid-card">
+                <mat-card-header>
+                    <div mat-card-avatar class="grid-header-image"></div>
+                    <mat-card-title>{{ cart.name }}</mat-card-title>
+                </mat-card-header>
+                <img mat-card-image src="{{ cart.imageUrl }}" alt="" />
+                <mat-card-content>
+                    <p>Quantity: {{ cart.quantity }}</p>
+                    <p>Price/per:{{ cart.price }}</p>
+                </mat-card-content>
+                <mat-card-actions>
+                    <input type="hidden" value="{{ cart.productId }}" #prodId />
+                    <button mat-raised-button color="primary">
+                        Edit
+                    </button>
+                    <button mat-raised-button color="primary">
+                        Delete
+                    </button>
+                </mat-card-actions>
+            </mat-card>
+        </mat-grid-tile>
+    </mat-grid-list>
+</mat-card>
