--- a/angular-web/src/app/home-builder/components/main-content/main-content.component.css
+++ b/angular-web/src/app/home-builder/components/main-content/main-content.component.css
@@ -1,8 +1,17 @@
+.container {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+}
 .grid-tile {
-    overflow: scroll;
+    width: 30%;
+    min-width: 250px;
 }
 .grid-card {
     max-width: 400px;
+    max-height: 300px;
+    min-height: 350px;
     margin: 10px;
     overflow: scroll;
 }
