--- a/angular-web/src/app/seller-builder/components/products/products.component.html
+++ b/angular-web/src/app/seller-builder/components/products/products.component.html
@@ -1,21 +1,20 @@
 <mat-card>
     <mat-card class="title-card">
-        <mat-card-actions>
-            <input type="hidden" value="" #prodId />
-            <a mat-raised-button color="primary" [routerLink]="['/addProduct']">
-                Add Product
-            </a>
-        </mat-card-actions>
+        <input type="hidden" value="" #prodId />
+        <a mat-raised-button color="primary" [routerLink]="['/AddProduct']">
+            Add Product
+        </a>
     </mat-card>
-    <mat-grid-list cols="5" rowHeight="1:2">
-        <div [hidden]="!loading">
-            Loading products...
-        </div>
+    <div [hidden]="!loading">
+        Loading products...
+    </div>
 
-        <div [hidden]="loading || results.length">
-            No products are here... yet.
-        </div>
-        <mat-grid-tile class="grid-tile" *ngFor="let cart of results">
+    <div [hidden]="loading || results.length">
+        No products are here... yet.
+    </div>
+    <div class="product-container">
+        <div class="grid-tile" *ngFor="let cart of results">
+            <mat-divider></mat-divider>
             <mat-card class="grid-card">
                 <mat-card-header>
                     <div mat-card-avatar class="grid-header-image"></div>
@@ -27,15 +26,21 @@
                     <p>Price/per:{{ cart.price }}</p>
                 </mat-card-content>
                 <mat-card-actions>
-                    <input type="hidden" value="{{ cart.productId }}" #prodId />
-                    <button mat-raised-button color="primary">
-                        Edit
-                    </button>
-                    <button mat-raised-button color="primary">
+                    <input type="hidden" value="{{ cart._id }}" #prodId />
+                    <a
+                        mat-raised-button
+                        color="primary"
+                        [routerLink]="['/EditProduct']"
+                        [queryParams]="{ id: prodId.value }"
+                    >
+                        Edit</a
+                    >
+                    <button mat-raised-button color="primary" (click)="deleteProduct(prodId.value)">
                         Delete
                     </button>
                 </mat-card-actions>
             </mat-card>
-        </mat-grid-tile>
-    </mat-grid-list>
+            <mat-divider></mat-divider>
+        </div>
+    </div>
 </mat-card>
