--- a/angular-web/src/app/material/layout/footer.component.css
+++ b/angular-web/src/app/material/layout/footer.component.css
@@ -7,6 +7,7 @@ footer {
     width: 100%;
     color: #f3f3f3;
     font-size: 0.7rem;
+    z-index: 1000;
 }
 footer .container {
     margin: auto;
