--- a/angular-web/src/app/home-builder/components/cart/cart.component.html
+++ b/angular-web/src/app/home-builder/components/cart/cart.component.html
@@ -29,7 +29,7 @@
                 </mat-card-content>
                 <mat-card-actions>
                     <input type="hidden" value="{{ cart.productId }}" #prodId />
-                    <button mat-raised-button color="primary" (click)="addToCart(prodId.value)">
+                    <button mat-raised-button color="primary" (click)="placeOrder(prodId.value)">
                         Place Order
                     </button>
                     <button mat-raised-button color="primary" (click)="remove(prodId.value)">
