--- a/angular-web/src/app/home-builder/components/main-content/main-content.component.html
+++ b/angular-web/src/app/home-builder/components/main-content/main-content.component.html
@@ -35,7 +35,7 @@
                         mat-raised-button
                         color="primary"
                         matTooltip="Place an Order"
-                        (click)="buy()"
+                        (click)="buy(prodId.value)"
                     >
                         Buy
                     </button>
