--- a/angular-web/src/app/home-builder/components/cart/cart.component.html
+++ b/angular-web/src/app/home-builder/components/cart/cart.component.html
@@ -7,7 +7,7 @@
         <button mat-raised-button color="primary" class="top-button" (click)="removeAll()">
             Remove All Products
         </button>
-        <button mat-raised-button color="primary" class="top-button" (click)="placeOrder()">
+        <button mat-raised-button color="primary" class="top-button">
             Place All Products
         </button>
     </mat-card>
