--- a/angular-web/src/app/home-builder/components/main-content/main-content.component.html
+++ b/angular-web/src/app/home-builder/components/main-content/main-content.component.html
@@ -27,7 +27,7 @@
                         mat-raised-button
                         color="primary"
                         matTooltip="Add to Shopping Cart"
-                        (click)="addToCart(prodId.value)"
+                        (click)="addToCartt(product._id)"
                     >
                         Cart
                     </button>
@@ -35,7 +35,7 @@
                         mat-raised-button
                         color="primary"
                         matTooltip="Place an Order"
-                        (click)="buy(prodId.value)"
+                        (click)="buy(product._id)"
                     >
                         Buy
                     </button>
