--- a/angular-web/src/app/home-builder/components/main-content/main-content.component.html
+++ b/angular-web/src/app/home-builder/components/main-content/main-content.component.html
@@ -25,9 +25,9 @@
                     <input type="hidden" value="{{ product._id }}" #prodId />
                     <button
                         mat-raised-button
+                        (click)="add(product._id)"
                         color="primary"
                         matTooltip="Add to Shopping Cart"
-                        (click)="addToCartt(product._id)"
                     >
                         Cart
                     </button>
